Managed/Window/Internal/WindowNative.cs

using System;
using System.Runtime.InteropServices;

namespace Luna.Window.Internal;

internal static class WindowNative
{
    private const string LibraryName = "LunaWindowC";

    internal delegate void EventHandler(IntPtr eventObject, IntPtr userdata);

    [StructLayout(LayoutKind.Sequential)]
    internal readonly struct FileDialogFilter
    {
        public FileDialogFilter(IntPtr name, IntPtr extensions, ulong extensionCount)
        {
            Name = name;
            Extensions = extensions;
            ExtensionCount = extensionCount;
        }

        public readonly IntPtr Name;
        public readonly IntPtr Extensions;
        public readonly ulong ExtensionCount;
    }

    [StructLayout(LayoutKind.Sequential)]
    internal readonly struct StringList
    {
        public readonly IntPtr Items;
        public readonly ulong Count;
    }

    [DllImport(LibraryName, EntryPoint = "luna_window_init_module")]
    internal static extern UIntPtr InitModule(
        [MarshalAs(UnmanagedType.LPUTF8Str)] string appName);

    [DllImport(LibraryName, EntryPoint = "luna_window_new")]
    internal static extern UIntPtr NewWindow(
        [MarshalAs(UnmanagedType.LPUTF8Str)] string title,
        int x,
        int y,
        uint width,
        uint height,
        uint styleFlags,
        uint creationFlags,
        out NativeWindowHandle outWindow);

    [DllImport(LibraryName, EntryPoint = "luna_window_poll_events")]
    internal static extern void PollEvents(int waitEvents);

    [DllImport(LibraryName, EntryPoint = "luna_window_set_event_handler")]
    internal static extern void SetEventHandler(EventHandler? eventHandler, IntPtr userdata);

#if LUNA_PLATFORM_DESKTOP
    [DllImport(LibraryName, EntryPoint = "luna_window_display_get_primary")]
    internal static extern IntPtr DisplayGetPrimary();

    [DllImport(LibraryName, EntryPoint = "luna_window_display_get_all")]
    internal static extern void DisplayGetAll(
        [Out] IntPtr[]? outDisplays,
        ulong capacity,
        out ulong count);

    [DllImport(LibraryName, EntryPoint = "luna_window_display_get_supported_video_modes")]
    internal static extern UIntPtr DisplayGetSupportedVideoModes(
        IntPtr display,
        [Out] DisplayVideoMode[]? outModes,
        ulong capacity,
        out ulong count);

    [DllImport(LibraryName, EntryPoint = "luna_window_display_get_video_mode")]
    internal static extern UIntPtr DisplayGetVideoMode(IntPtr display, out DisplayVideoMode mode);

    [DllImport(LibraryName, EntryPoint = "luna_window_display_get_position")]
    internal static extern UIntPtr DisplayGetPosition(IntPtr display, out Point2I position);

    [DllImport(LibraryName, EntryPoint = "luna_window_display_get_working_area")]
    internal static extern UIntPtr DisplayGetWorkingArea(IntPtr display, out RectI rect);

    [DllImport(LibraryName, EntryPoint = "luna_window_display_get_name")]
    internal static extern UIntPtr DisplayGetName(IntPtr display, out IntPtr name);
#endif

    [DllImport(LibraryName, EntryPoint = "luna_window_clipboard_get_text")]
    internal static extern UIntPtr ClipboardGetText(out IntPtr text);

    [DllImport(LibraryName, EntryPoint = "luna_window_clipboard_set_text")]
    internal static extern UIntPtr ClipboardSetText([MarshalAs(UnmanagedType.LPUTF8Str)] string text);

    [DllImport(LibraryName, EntryPoint = "luna_window_free_string")]
    internal static extern void FreeString(IntPtr text);

    [DllImport(LibraryName, EntryPoint = "luna_window_free_string_list")]
    internal static extern void FreeStringList(IntPtr texts, ulong count);

    [DllImport(LibraryName, EntryPoint = "luna_window_message_box")]
    internal static extern UIntPtr MessageBox(
        [MarshalAs(UnmanagedType.LPUTF8Str)] string text,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string caption,
        uint type,
        uint icon,
        out uint button);

#if LUNA_PLATFORM_WINDOWS || LUNA_PLATFORM_MACOS
    [DllImport(LibraryName, EntryPoint = "luna_window_open_file_dialog")]
    internal static extern UIntPtr OpenFileDialog(
        [MarshalAs(UnmanagedType.LPUTF8Str)] string? title,
        [In] FileDialogFilter[]? filters,
        ulong filterCount,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string? initialDirectory,
        uint flags,
        out StringList paths);

    [DllImport(LibraryName, EntryPoint = "luna_window_save_file_dialog")]
    internal static extern UIntPtr SaveFileDialog(
        [MarshalAs(UnmanagedType.LPUTF8Str)] string? title,
        [In] FileDialogFilter[]? filters,
        ulong filterCount,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string? initialFilePath,
        uint flags,
        out IntPtr path);

    [DllImport(LibraryName, EntryPoint = "luna_window_open_dir_dialog")]
    internal static extern UIntPtr OpenDirDialog(
        [MarshalAs(UnmanagedType.LPUTF8Str)] string? title,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string? initialDirectory,
        out IntPtr path);
#endif

    [DllImport(LibraryName, EntryPoint = "luna_window_get_window_event_type")]
    internal static extern IntPtr GetWindowEventType();

    [DllImport(LibraryName, EntryPoint = "luna_window_get_window_request_close_event_type")]
    internal static extern IntPtr GetWindowRequestCloseEventType();

    [DllImport(LibraryName, EntryPoint = "luna_window_get_window_closed_event_type")]
    internal static extern IntPtr GetWindowClosedEventType();

    [DllImport(LibraryName, EntryPoint = "luna_window_get_window_input_focus_event_type")]
    internal static extern IntPtr GetWindowInputFocusEventType();

    [DllImport(LibraryName, EntryPoint = "luna_window_get_window_lose_input_focus_event_type")]
    internal static extern IntPtr GetWindowLoseInputFocusEventType();

    [DllImport(LibraryName, EntryPoint = "luna_window_get_window_show_event_type")]
    internal static extern IntPtr GetWindowShowEventType();

    [DllImport(LibraryName, EntryPoint = "luna_window_get_window_hide_event_type")]
    internal static extern IntPtr GetWindowHideEventType();

    [DllImport(LibraryName, EntryPoint = "luna_window_get_window_resize_event_type")]
    internal static extern IntPtr GetWindowResizeEventType();

    [DllImport(LibraryName, EntryPoint = "luna_window_get_window_framebuffer_resize_event_type")]
    internal static extern IntPtr GetWindowFramebufferResizeEventType();

    [DllImport(LibraryName, EntryPoint = "luna_window_get_window_move_event_type")]
    internal static extern IntPtr GetWindowMoveEventType();

    [DllImport(LibraryName, EntryPoint = "luna_window_get_window_dpi_scale_changed_event_type")]
    internal static extern IntPtr GetWindowDpiScaleChangedEventType();

    [DllImport(LibraryName, EntryPoint = "luna_window_get_window_key_down_event_type")]
    internal static extern IntPtr GetWindowKeyDownEventType();

    [DllImport(LibraryName, EntryPoint = "luna_window_get_window_key_up_event_type")]
    internal static extern IntPtr GetWindowKeyUpEventType();

    [DllImport(LibraryName, EntryPoint = "luna_window_get_window_input_text_event_type")]
    internal static extern IntPtr GetWindowInputTextEventType();

    [DllImport(LibraryName, EntryPoint = "luna_window_get_window_mouse_enter_event_type")]
    internal static extern IntPtr GetWindowMouseEnterEventType();

    [DllImport(LibraryName, EntryPoint = "luna_window_get_window_mouse_leave_event_type")]
    internal static extern IntPtr GetWindowMouseLeaveEventType();

    [DllImport(LibraryName, EntryPoint = "luna_window_get_window_mouse_move_event_type")]
    internal static extern IntPtr GetWindowMouseMoveEventType();

    [DllImport(LibraryName, EntryPoint = "luna_window_get_window_mouse_down_event_type")]
    internal static extern IntPtr GetWindowMouseDownEventType();

    [DllImport(LibraryName, EntryPoint = "luna_window_get_window_mouse_up_event_type")]
    internal static extern IntPtr GetWindowMouseUpEventType();

    [DllImport(LibraryName, EntryPoint = "luna_window_get_window_scroll_event_type")]
    internal static extern IntPtr GetWindowScrollEventType();

    [DllImport(LibraryName, EntryPoint = "luna_window_get_window_touch_down_event_type")]
    internal static extern IntPtr GetWindowTouchDownEventType();

    [DllImport(LibraryName, EntryPoint = "luna_window_get_window_touch_move_event_type")]
    internal static extern IntPtr GetWindowTouchMoveEventType();

    [DllImport(LibraryName, EntryPoint = "luna_window_get_window_touch_up_event_type")]
    internal static extern IntPtr GetWindowTouchUpEventType();

    [DllImport(LibraryName, EntryPoint = "luna_window_get_window_drop_files_event_type")]
    internal static extern IntPtr GetWindowDropFilesEventType();

    [DllImport(LibraryName, EntryPoint = "luna_window_get_application_event_type")]
    internal static extern IntPtr GetApplicationEventType();

    [DllImport(LibraryName, EntryPoint = "luna_window_get_application_did_enter_foreground_event_type")]
    internal static extern IntPtr GetApplicationDidEnterForegroundEventType();

    [DllImport(LibraryName, EntryPoint = "luna_window_get_application_will_enter_foreground_event_type")]
    internal static extern IntPtr GetApplicationWillEnterForegroundEventType();

    [DllImport(LibraryName, EntryPoint = "luna_window_get_application_did_enter_background_event_type")]
    internal static extern IntPtr GetApplicationDidEnterBackgroundEventType();

    [DllImport(LibraryName, EntryPoint = "luna_window_get_application_will_enter_background_event_type")]
    internal static extern IntPtr GetApplicationWillEnterBackgroundEventType();

    [DllImport(LibraryName, EntryPoint = "luna_window_get_application_will_terminate_event_type")]
    internal static extern IntPtr GetApplicationWillTerminateEventType();

    [DllImport(LibraryName, EntryPoint = "luna_window_get_application_did_receive_memory_warning_event_type")]
    internal static extern IntPtr GetApplicationDidReceiveMemoryWarningEventType();

    [DllImport(LibraryName, EntryPoint = "luna_window_get_screen_keyboard_shown_event_type")]
    internal static extern IntPtr GetScreenKeyboardShownEventType();

    [DllImport(LibraryName, EntryPoint = "luna_window_get_screen_keyboard_hidden_event_type")]
    internal static extern IntPtr GetScreenKeyboardHiddenEventType();

    [DllImport(LibraryName, EntryPoint = "luna_window_event_get_window")]
    internal static extern UIntPtr WindowEventGetWindow(IntPtr eventObject, out NativeWindowHandle outWindow);

    [DllImport(LibraryName, EntryPoint = "luna_window_request_close_event_get_do_close")]
    internal static extern int WindowRequestCloseEventGetDoClose(IntPtr eventObject);

    [DllImport(LibraryName, EntryPoint = "luna_window_request_close_event_set_do_close")]
    internal static extern void WindowRequestCloseEventSetDoClose(IntPtr eventObject, int doClose);

    [DllImport(LibraryName, EntryPoint = "luna_window_resize_event_get_size")]
    internal static extern void WindowResizeEventGetSize(IntPtr eventObject, out uint width, out uint height);

    [DllImport(LibraryName, EntryPoint = "luna_window_framebuffer_resize_event_get_size")]
    internal static extern void WindowFramebufferResizeEventGetSize(IntPtr eventObject, out uint width, out uint height);

    [DllImport(LibraryName, EntryPoint = "luna_window_move_event_get_position")]
    internal static extern void WindowMoveEventGetPosition(IntPtr eventObject, out int x, out int y);

    [DllImport(LibraryName, EntryPoint = "luna_window_key_down_event_get_key")]
    internal static extern uint WindowKeyDownEventGetKey(IntPtr eventObject);

    [DllImport(LibraryName, EntryPoint = "luna_window_key_up_event_get_key")]
    internal static extern uint WindowKeyUpEventGetKey(IntPtr eventObject);

    [DllImport(LibraryName, EntryPoint = "luna_window_input_text_event_get_text")]
    internal static extern IntPtr WindowInputTextEventGetText(IntPtr eventObject);
